@@ -1,3 +1,13 @@
+2015-04-22  Eric Carlson  <eric.carlson@apple.com>
+
+        Update AirPlay sandbox rules
+        https://bugs.webkit.org/show_bug.cgi?id=144062
+        <rdar://problem/19869448>
+
+        Reviewed by Alexey Proskuryakov.
+
+        * WebProcess/com.apple.WebProcess.sb.in: Remove obsolete rules.
+
 2015-04-22  Alexey Proskuryakov  <ap@apple.com>
 
         [Mac] In nightlies and local builds, WebKit services can get terminated under memory pressure
